Fixes overflow issue with dropdown. Changes dropdown theme

--- a/app/components/FileLoader.scss
+++ b/app/components/FileLoader.scss
@@ -74,9 +74,9 @@
 }
 
 .filter-controls {
-  bottom: 20px;
-  //left: 20px;
-  //margin-left: 80px;
+  overflow: visible;
+  width: 45%;
+  color: black;
 }
 
 .show-anyway {
